--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/mongoose": "^5.11.97",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
