--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "dev": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
-    "js": "nodemon dist/index "
+    "js": "nodemon dist/index ",
+    "start": "node ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -48,5 +49,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
-  }
+  },
+  "engines": {"node": "v16.14.0"}
 }
