--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "dev": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
-    "js": "nodemon dist/index ",
+    "js": "nodemon -r dotenv/config dist/index ",
     "start": "node ./dist/index.js"
   },
   "repository": {
