--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
     "js": "nodemon -r dotenv/config dist/index ",
-    "start": "node ./dist/index.js"
+    "start": "node -r dotenv/config ./dist/index.js"
   },
   "repository": {
     "type": "git",
