--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "homepage": "https://github.com/nagy-nabil/POS#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.8",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   },
@@ -50,5 +52,7 @@
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
   },
-  "engines": {"node": "v16.14.0"}
+  "engines": {
+    "node": "v16.14.0"
+  }
 }
