--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
     "dev": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
     "js": "nodemon -r dotenv/config dist/index ",
-    "start": "node -r dotenv/config ./dist/index.js"
+    "start": "nodemon -r dotenv/config ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,17 +32,19 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.5",
+    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.8",
+    "jest": "^29.0.1",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "@types/mongoose": "^5.11.97",
-    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
