--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/nagy-nabil/POS#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.5",
@@ -45,6 +46,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
