--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "dev": "tsc --watch --preserveWatchOutput",
+    "build": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
     "js": "nodemon -r dotenv/config dist/index ",
     "start": "node -r dotenv/config ./dist/index.js"
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.8",
+    "cross-env": "^7.0.3",
     "jest": "^29.0.1",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
