--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true
     },
     "include": ["src"]
 }
