--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "build": "tsc --watch --preserveWatchOutput",
+    "build": "tsc",
+    "build:watch": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
     "js": "nodemon -r dotenv/config dist/index ",
     "start": "node -r dotenv/config ./dist/index.js"
