--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "build": "tsc",
+    "build": "npx tsc",
     "build:watch": "tsc --watch --preserveWatchOutput",
     "ts": "ts-node-esm src/index.ts",
     "js": "nodemon -r dotenv/config dist/index ",
