--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-modal": "^3.16.1",
     "superjson": "1.12.2",
     "sweetalert": "^2.1.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
