--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
