--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "@trpc/server": "^10.18.0",
     "bcrypt": "^5.1.0",
     "html5-qrcode": "^2.3.8",
+    "i18next": "^23.1.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
+    "next-i18next": "^14.0.0",
     "next-superjson": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^13.0.0",
     "react-modal": "^3.16.1",
     "superjson": "1.12.2",
     "sweetalert": "^2.1.2",
