--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^13.0.0",
+    "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "superjson": "1.12.2",
     "sweetalert": "^2.1.2",
