--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.29.12",
+    "@tanstack/react-table": "^8.9.2",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
