--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "bcrypt": "^5.1.0",
+    "clsx": "^1.2.1",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.1.0",
     "jsonwebtoken": "^9.0.0",
