--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pos",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@7.32.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -9,7 +10,11 @@
     "lint": "next lint",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedDev.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -44,6 +49,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/eslint": "^8.21.3",
     "@types/jsonwebtoken": "^9.0.2",
@@ -63,6 +69,7 @@
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "ct3aMetadata": {
