--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-i18next": "^13.0.0",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
+    "react-to-print": "^2.14.13",
     "superjson": "1.12.2",
     "sweetalert": "^2.1.2",
     "zod": "^3.21.4"
