--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-to-print": "^2.14.13",
+    "sharp": "^0.32.1",
     "superjson": "1.12.2",
     "sweetalert": "^2.1.2",
     "zod": "^3.21.4"
