--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedDev.ts"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.14.0",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
