update the workflow

--- a/.github/workflows/valid.yml
+++ b/.github/workflows/valid.yml
@@ -4,6 +4,9 @@ env:
   JWTEXPIREIN: ${{ secrets.JWTEXPIREIN}}
   JWTSECRET: ${{ secrets.JWTSECRET}}
   NODE_ENV: ${{ secrets.NODE_ENV}}
+  AZURESTORAGEACCOUNTKEY: ${{secrets.AZURESTORAGEACCOUNTKEY}}
+  AZURECONTAINERNAME: ${{secrets.AZURECONTAINERNAME}}
+  AZURESTROAGEACCOUNTNAME: ${{secrets.AZURESTROAGEACCOUNTNAME}}
 
 on:
   push:
