--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^23.1.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "match-sorter": "^6.3.1",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "next-i18next": "^14.0.0",
