--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/eslint": "^8.44.0",
     "@types/jsonwebtoken": "^9.0.2",
