--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-query": "^4.32.0",
@@ -32,11 +34,13 @@
     "@trpc/react-query": "^10.35.0",
     "@trpc/server": "^10.35.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.1.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.268.0",
     "match-sorter": "^6.3.1",
     "next": "^13.4.12",
     "next-auth": "^4.21.0",
@@ -52,6 +56,8 @@
     "react-to-print": "^2.14.13",
     "sharp": "^0.32.1",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
