--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:seed": "prisma db seed"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedDev.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seedPro.ts"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.15.0",
@@ -24,6 +24,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -87,8 +88,8 @@
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.12.1"
