--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@trpc/server": "^10.38.5",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^1.2.1",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.5.1",
@@ -50,6 +51,7 @@
     "match-sorter": "^6.3.1",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
     "next-i18next": "^14.0.3",
     "next-superjson": "^0.0.4",
     "next-themes": "^0.2.1",
