--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,13 +15,18 @@ env:
 
 on:
   push:
-  pull_request:
     branches: [main]
+
 jobs:
-  valid:
+  createDemo:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout main branch
+        uses: actions/checkout@v3
+        with:
+          ref: main
+      - name: checkout demo branch
+          run: git checkout  demo
       - uses: pnpm/action-setup@v3
         with:
           version: 8
@@ -32,7 +37,5 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-      - name: check types
-        run: pnpm run typecheck
-      - name: linter
-        run: pnpm run lint
+      - name: Run Prisma Migration
+        run: pnpm prisma migrate reset
