fix(demo workflow): prisma Skip the confirmation prompt

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -50,4 +50,4 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run Prisma Migration
-        run: pnpm prisma migrate reset
+        run: pnpm prisma migrate reset --force --skip-generate
