--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -31,34 +33,33 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/match-sorter-utils": "^8.8.4",
-    "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-query-devtools": "^4.35.3",
-    "@tanstack/react-table": "^8.10.3",
-    "@tanstack/table-core": "^8.10.3",
+    "@tanstack/match-sorter-utils": "^8.15.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.15.3",
+    "@tanstack/table-core": "^8.15.3",
     "@trpc/client": "^10.38.5",
-    "@trpc/next": "^10.38.5",
-    "@trpc/react-query": "^10.38.5",
-    "@trpc/server": "^10.38.5",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "html5-qrcode": "^2.3.8",
-    "i18next": "^23.8.2",
+    "i18next": "^23.10.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.323.0",
+    "lucide-react": "^0.364.0",
     "match-sorter": "^6.3.4",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
-    "next-cloudinary": "^5.20.0",
+    "next-cloudinary": "^6.3.0",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-charts": "3.0.0-beta.55",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.51.2",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
@@ -72,24 +73,25 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/eslint": "^8.56.6",
+    "@types/eslint": "^8.56.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
+    "@types/node": "^20.12.3",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
     "@types/react-modal": "^3.16.3",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "prisma": "^5.11.0",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prisma": "^5.12.0",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
