init local first workflow

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-persist-client": "^4.36.1",
     "@tanstack/react-table": "^8.15.3",
     "@tanstack/table-core": "^8.15.3",
     "@trpc/client": "^10.38.5",
@@ -48,6 +49,7 @@
     "clsx": "^2.1.0",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.10.1",
+    "idb-keyval": "^6.2.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.365.0",
